bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
var fin:Boolean = false ;
^BDR:6: error: ';' expected but 'else' found.
      else if (litMessage=="L")
      ^BDR:8: error: ';' expected but 'else' found.
       else if (litMessage=="I")
       ^BDR:10: error: ';' expected but 'else' found.
      else if (litMessage=="A")
      ^BDR:12: error: ';' expected but 'else' found.
      else{ if (litMessage=="B")
      ^